changes for today

--- a/code/Evo_vs2010.vcxproj
+++ b/code/Evo_vs2010.vcxproj
@@ -189,6 +189,7 @@
     <CudaCompile Include="includes\errors.cu" />
     <CudaCompile Include="src\dataLoader.cu" />
     <CudaCompile Include="src\dataLoader_Iris.cu" />
+    <CudaCompile Include="src\distanceCalculator.cu" />
     <CudaCompile Include="src\main.cu" />
     <CudaCompile Include="src\vectorAdd.cu">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
