--- a/code/Evo_vs2010_noCUDA.vcxproj
+++ b/code/Evo_vs2010_noCUDA.vcxproj
@@ -72,6 +72,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="includes\clustering.cuh" />
     <None Include="includes\dataLoader.cuh" />
     <None Include="includes\dataLoader_Iris.cuh" />
     <None Include="includes\defs.cuh" />
@@ -82,6 +83,7 @@
     <None Include="includes\evoEngine.cuh" />
     <None Include="includes\globals.cuh" />
     <None Include="ReadMe.txt" />
+    <None Include="src\clustering.cu" />
     <None Include="src\dataLoader.cu" />
     <None Include="src\dataLoader_Iris.cu" />
     <None Include="src\distamceCalculator_Iris.cu" />
