Added test loader. Fixed bug in distance calculator - distanceIdx

--- a/code/Evo_vs2010_noCUDA.vcxproj
+++ b/code/Evo_vs2010_noCUDA.vcxproj
@@ -97,6 +97,7 @@
   <ItemGroup>
     <ClInclude Include="dataLoader.h" />
     <ClInclude Include="dataLoader_Iris.h" />
+    <ClInclude Include="dataLoader_Test.h" />
     <ClInclude Include="distanceCalculator.h" />
     <ClInclude Include="errors.h" />
     <ClInclude Include="loops.h" />
@@ -104,6 +105,7 @@
   <ItemGroup>
     <ClCompile Include="dataLoader.c" />
     <ClCompile Include="dataLoader_Iris.c" />
+    <ClCompile Include="dataLoader_test.c" />
     <ClCompile Include="distanceCalculator.c" />
     <ClCompile Include="errors.c" />
     <ClCompile Include="Evo_vs2010_noCUDA.c" />
