--- a/code/Evo_vs2010.vcxproj.filters
+++ b/code/Evo_vs2010.vcxproj.filters
@@ -12,34 +12,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="includes\defs.h" />
-    <ClInclude Include="includes\errors.cuh">
-      <Filter>inc</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <CudaCompile Include="src\dataLoader.cu">
-      <Filter>src</Filter>
-    </CudaCompile>
-    <CudaCompile Include="src\dataLoader_Iris.cu">
-      <Filter>src</Filter>
-    </CudaCompile>
-    <CudaCompile Include="src\vectorAdd.cu">
-      <Filter>src</Filter>
-    </CudaCompile>
-    <CudaCompile Include="includes\errors.cu">
-      <Filter>src</Filter>
-    </CudaCompile>
-    <CudaCompile Include="src\main.cu">
-      <Filter>src</Filter>
-    </CudaCompile>
-    <CudaCompile Include="src\distanceCalculator.cu">
-      <Filter>src</Filter>
-    </CudaCompile>
     <CudaCompile Include="src\clustering.cu">
       <Filter>src</Filter>
     </CudaCompile>
+    <CudaCompile Include="src\dataLoader.cu">
+      <Filter>src</Filter>
+    </CudaCompile>
     <CudaCompile Include="src\dataLoader_Cancer.cu">
+      <Filter>src</Filter>
+    </CudaCompile>
+    <CudaCompile Include="src\dataLoader_Iris.cu">
       <Filter>src</Filter>
     </CudaCompile>
     <CudaCompile Include="src\dataLoader_test.cu">
@@ -48,39 +30,45 @@
     <CudaCompile Include="src\dataLoader_Wine.cu">
       <Filter>src</Filter>
     </CudaCompile>
+    <CudaCompile Include="src\distanceCalculator.cu">
+      <Filter>src</Filter>
+    </CudaCompile>
+    <CudaCompile Include="src\main.cu">
+      <Filter>src</Filter>
+    </CudaCompile>
+    <CudaCompile Include="includes\errors.cu">
+      <Filter>inc</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="includes\dataLoader.cuh">
-      <Filter>inc</Filter>
-    </None>
-    <None Include="includes\dataLoader_Iris.cuh">
-      <Filter>inc</Filter>
-    </None>
-    <None Include="includes\defs.cuh">
-      <Filter>inc</Filter>
-    </None>
-    <None Include="includes\evoEngine.cuh">
-      <Filter>inc</Filter>
-    </None>
-    <None Include="includes\globals.cuh">
-      <Filter>inc</Filter>
-    </None>
-    <None Include="includes\distanceCalculator.cuh">
-      <Filter>inc</Filter>
-    </None>
-    <None Include="includes\distanceCalculator_Iris.cuh">
-      <Filter>inc</Filter>
-    </None>
     <None Include="includes\clustering.cuh">
       <Filter>inc</Filter>
     </None>
+    <None Include="includes\dataLoader.cuh">
+      <Filter>inc</Filter>
+    </None>
     <None Include="includes\dataLoader_Cancer.cuh">
+      <Filter>inc</Filter>
+    </None>
+    <None Include="includes\dataLoader_Iris.cuh">
       <Filter>inc</Filter>
     </None>
     <None Include="includes\dataLoader_Test.cuh">
       <Filter>inc</Filter>
     </None>
     <None Include="includes\dataLoader_Wine.cuh">
+      <Filter>inc</Filter>
+    </None>
+    <None Include="includes\distanceCalculator.cuh">
+      <Filter>inc</Filter>
+    </None>
+    <None Include="includes\errors.cuh">
+      <Filter>inc</Filter>
+    </None>
+    <None Include="includes\evoEngine.cuh">
+      <Filter>inc</Filter>
+    </None>
+    <None Include="includes\globals.cuh">
       <Filter>inc</Filter>
     </None>
   </ItemGroup>
