--- a/code/Evo_vs2010.vcxproj
+++ b/code/Evo_vs2010.vcxproj
@@ -149,7 +149,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
       <AdditionalDependencies>cudart.lib;cutil32.lib;shrUtils32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(CudaToolkitLibDir);../../common/lib/$(PlatformName);../../../shared/lib/$(PlatformName)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(CudaToolkitLibDir);../../common/lib/$(PlatformName);../../../shared/lib/$(PlatformName);$(NVSDKCOMPUTE_ROOT)\C\common\lib\$(PlatformName);$(NVSDKCOMPUTE_ROOT)\shared\lib\$(PlatformName)</AdditionalLibraryDirectories>
       <OutputFile>$(OutDir)/vectorAdd.exe</OutputFile>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
@@ -160,6 +160,7 @@
     <CudaCompile>
       <CodeGeneration>compute_10,sm_10;compute_20,sm_20</CodeGeneration>
       <Runtime>MT</Runtime>
+      <Include>includes;$(NVSDKCOMPUTE_ROOT)\C\common\inc;$(NVSDKCOMPUTE_ROOT)\shared\inc;%(Include)</Include>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
